--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'EVE Sans';
+  src: url(assets/fonts/EveSans.ttf);
+}
+
 /* Ares overrides */
 
 #page-container.modern-sf:before {
@@ -10,12 +15,132 @@
 
 /* General */
 
-main {
-  padding: 0 20px;
-}
-
 * {
   user-select: none;
   /* TODO: enable this only for touch displays 
   cursor: none; */
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  background: #000;
+}
+
+header {
+  border-bottom: 1px solid rgba(255, 255, 255, .07);
+}
+
+main {
+  padding: 0 20px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Eve Sans';
+  text-transform: uppercase;
+  margin: 1.25rem 1.5rem;
+  color: #e8f4ff;
+}
+
+a {
+  color: #62d0f0;
+  font-weight: 600;
+  -webkit-transition: color .15s ease-out;
+  transition: color .15s ease-out;
+}
+
+a:hover,
+a:focus {
+  color: #62d0f0;
+  text-decoration: none;
+}
+
+a.rise-link {
+  position: relative;
+}
+
+a.rise-link:before {
+  position: absolute;
+  top: -5px;
+  right: -2px;
+  bottom: -5px;
+  left: -2px;
+  content: "";
+  background-color: rgba(255, 255, 255, .15);
+  visibility: hidden;
+  -webkit-transform: scaleY(2);
+  -ms-transform: scaleY(2);
+  transform: scaleY(2);
+  -webkit-transition: -webkit-transform .12s ease-out;
+  transition: transform .12s ease-out;
+}
+
+a.rise-link:hover,
+a.rise-link:focus {
+  color: #fff;
+}
+
+a.rise-link:hover:before,
+a.rise-link:focus:before {
+  visibility: visible;
+  -webkit-transform: scaleY(1);
+  -ms-transform: scaleY(1);
+  transform: scaleY(1);
+}
+
+a.rise-link:active:before {
+  -webkit-transform: scaleY(1.2);
+  -ms-transform: scaleY(1.2);
+  transform: scaleY(1.2);
+}
+
+/* Utilities */
+
+.push-5 { margin-bottom: 5%; }
+.push-10 { margin-bottom: 10%; }
+.push-20 { margin-bottom: 20%; }
+.push-30 { margin-bottom: 30%; }
+.push-40 { margin-bottom: 40%; }
+.push-50 { margin-bottom: 50%; }
+
+/* Animations */
+
+@-webkit-keyframes spin {
+  from {
+      -webkit-transform: rotate(0deg);
+  }
+
+  to {
+      -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  from {
+      transform: rotate(0deg);
+  }
+
+  to {
+      transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes spin-inverse {
+  from {
+      -webkit-transform: rotate(0deg);
+  }
+
+  to {
+      -webkit-transform: rotate(-360deg);
+  }
+}
+
+@keyframes spin-inverse {
+  from {
+      transform: rotate(0deg);
+  }
+
+  to {
+      transform: rotate(-360deg);
+  }
 }
