basic auth flow complete

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,1 +1,7 @@
-{{outlet}}
+<div class="Gloss">
+  <div class="Gloss-module--top"></div>
+  <div class="Gloss-module">
+    {{liquid-outlet}}
+  </div>
+  <div class="Gloss-module--bottom"></div>
+</div>
