--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,5 +1,3 @@
-// @import 'node_modules/spectre.css/src/spectre';
-
 @font-face {
   font-family: 'EVE Sans';
   src: url(fonts/EveSans.ttf);
@@ -32,29 +30,41 @@ body {
 }
 
 .message {
-  h3 {
+  h3, p {
     overflow: hidden;
-    border-right: .15em solid azure;
     white-space: nowrap;
     margin: 0 auto;
     letter-spacing: 0;
+  }
+
+  h3 {
+    border-right: .15em solid azure;
     animation:
       typing 2s steps(40, end),
       blink-caret .75s step-end infinite;
   }
 
-  &.is-fading-out {
-    animation: fade-out 375ms;
-  }
-
-  @keyframes fade-out {
-    from { opacity: 1 }
-    to { opacity: 0 }
+  p {
+    text-align: center;
+    animation:
+      fade-sub 4s steps(40, end);
   }
 
   @keyframes typing {
     from { width: 0 }
     to { width: 100% }
+  }
+
+  @keyframes typing-sub {
+    0% { width: 0 }
+    50% { width: 0 }
+    100% { width: 100% }
+  }
+
+  @keyframes fade-sub {
+    0% { opacity: 0 }
+    50% { opacity: 0 }
+    100% { opacity: 1 }
   }
 
   @keyframes blink-caret {
