--- a/app/templates/navigate.hbs
+++ b/app/templates/navigate.hbs
@@ -1,7 +1,4 @@
 <div class="message">
-  {{#if model}}
-    <h3>Link established. Welcome, {{model.CharacterName}}.</h3>
-  {{else}}
-    <h3>Linking...</h3>
-  {{/if}}
+  <h3>Link established. Welcome, {{model.character.CharacterName}}.</h3>
+  <p>Current system: {{model.location.name}}</p>
 </div>
