--- a/app/templates/navigate.hbs
+++ b/app/templates/navigate.hbs
@@ -1,8 +1,12 @@
 <div class="message">
-  <h3>Link established. Welcome, {{model.character.name}}.</h3>
-  <p>
-    <span>{{model.character.ship.name}}</span> /
-    <span>{{model.character.system.name}}</span> /
-    <span class="{{if model.character.online 'green' 'red' }}">{{if model.character.online 'Online' 'Offline'}}</span>
-  </p>
+  {{#if character.name}}
+    <h3>Link established. Welcome, {{character.name}}.</h3>
+    <p>
+      <span>{{character.ship.name}}</span> /
+      <span>{{character.system.name}}</span> /
+      <span class="{{if character.online 'green' 'red' }}">{{if character.online 'Online' 'Offline'}}</span>
+    </p>
+  {{else}}
+    <h3>Receiving...</h3>
+  {{/if}}
 </div>
