skeletal layout, websockets polish

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,3 @@
 <div class="Gloss">
-  <div class="Gloss-module--top"></div>
-  <div class="Gloss-module">
-    {{liquid-outlet}}
-  </div>
-  <div class="Gloss-module--bottom"></div>
+  {{liquid-outlet containerless=true}}
 </div>
