--- a/app/templates/authorize.hbs
+++ b/app/templates/authorize.hbs
@@ -1,1 +1,7 @@
-<a class="btn" href="http://gloss/api/auth/authorize">Authorize</a>
+<div class="Gloss-module Gloss-module--x">
+  <div class="Gloss-module Gloss-module--y Gloss-hud">
+    <div class="Gloss-module">
+      <a class="btn" href="http://gloss/api/auth/authorize">Authorize</a>
+    </div>
+  </div>
+</div>
