--- a/app/templates/welcome.hbs
+++ b/app/templates/welcome.hbs
@@ -1,3 +1,9 @@
-<div class="message">
-  <h3>Booting system...</h3>
+<div class="Gloss-module Gloss-module--x">
+  <div class="Gloss-module Gloss-module--y Gloss-hud">
+    <div class="Gloss-module">
+      {{gloss-message
+        header="Booting system..."
+        }}
+    </div>
+  </div>
 </div>
