--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,16 +4,29 @@
 }
 
 body {
-  background: black;
+  background: url(/assets/bg.jpg) center center no-repeat fixed #000;
+  background-size: cover;
   color: azure;
   font-family: 'EVE Sans', sans-serif;
+  letter-spacing: 1.4px;
   text-transform: uppercase;
   overflow: hidden;
+  margin: 0;
 
   * {
     font-family: 'EVE Sans', sans-serif;
     text-transform: uppercase;
   }
+}
+
+h1, h2, h3, h4, h5, h6 {
+  position: relative;
+  z-index: 1;
+  text-shadow: -5px 5px 6px rgba(0,0,0,0.4);
+}
+
+.liquid-container {
+  z-index: 1;
 }
 
 .red {
@@ -37,15 +50,96 @@ body {
   text-decoration: none;
 }
 
-.message {
-  h3, p {
+.Gloss {
+  height: 96vh;
+  padding: 2vh;
+}
+
+.Gloss-module {
+  display: flex;
+  align-items: center; 
+
+  > * {
+    flex: 1;
+  }
+
+  &--x {
+    flex-direction: row;
+    width: 100%;
+
+    > .Gloss-shard {
+      text-align: center;
+    }
+  }
+
+  &--y {
+    flex-direction: column;
+
+    > :first-child {
+      align-items: flex-start;
+    }
+
+    > :last-child {
+      align-items: flex-end;
+    }
+
+    > :first-child:last-child {
+      align-items: center;
+    }
+  }
+}
+
+.Gloss-shard {
+  h5 {
+    margin: 0;
+  }
+
+  h2 {
+    margin: 0.3rem 0 0 0;
+  }
+
+  &:not(.Gloss-shard--primary) {
+    h5 {
+      font-size: 0.63em;
+    }
+
+    h2 {
+      font-size: 1.125em;
+    }
+  }
+}
+
+.Gloss-panel {
+  > * {
+    flex: 0;
+  }
+
+  justify-content: flex-end;
+}
+
+.Gloss-hud {
+  flex: 3;
+  height: 96vh;
+  align-items: center;
+
+  > :first-child {
+    max-width: 70%;
+  }
+
+  > :last-child {
+    max-width: 50%;
+  }
+}
+
+.Gloss-message {
+  h2, p {
     overflow: hidden;
     white-space: nowrap;
     margin: 0 auto;
-    letter-spacing: 0;
+    padding: 5px;
   }
 
-  h3 {
+  h2 {
     border-right: .15em solid azure;
     animation:
       typing 2s steps(40, end),
@@ -57,46 +151,51 @@ body {
     animation:
       fade-sub 4s steps(40, end);
   }
-
-  @keyframes typing {
-    from { width: 0 }
-    to { width: 100% }
-  }
-
-  @keyframes typing-sub {
-    0% { width: 0 }
-    50% { width: 0 }
-    100% { width: 100% }
-  }
-
-  @keyframes fade-sub {
-    0% { opacity: 0 }
-    50% { opacity: 0 }
-    100% { opacity: 1 }
-  }
-
-  @keyframes blink-caret {
-    from, to { border-color: transparent }
-    50% { border-color: azure; }
-  }
 }
 
-.Gloss {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  height: 100vh;
+.background {
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  // animation: glow 5s infinite; 
+  background:
+    radial-gradient(circle at center,
+    rgb(204, 255, 252) 0%,
+    rgba(204, 255, 252,0.88) 58%,
+    rgba(204, 255, 252,0.57) 80%,
+    rgba(204, 255, 252,0.27) 93%,
+    rgba(204, 255, 252,0) 100%);
+  opacity: 0.15;
+  pointer-events: none;
+  position: fixed;
+  z-index: 0;
 }
 
-.Gloss-module {
-  max-width: 50%;
+@keyframes glow {
+  0% { opacity: 0.1; }
+  50% { opacity: 0.05; }
+  100% { opacity: 0.1; }
 }
 
-.Gloss-module--top {
-  align-self: flex-start;
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
 }
 
-.Gloss-module--bottom {
-  align-self: flex-end;
+@keyframes typing-sub {
+  0% { width: 0 }
+  50% { width: 0 }
+  100% { width: 100% }
+}
+
+@keyframes fade-sub {
+  0% { opacity: 0 }
+  50% { opacity: 0 }
+  100% { opacity: 1 }
+}
+
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: azure; }
 }
