--- a/app/templates/components/gloss-shard.hbs
+++ b/app/templates/components/gloss-shard.hbs
@@ -7,7 +7,7 @@
         value=value
         }}
     {{else}}
-      {{value}}
+      {{liquid-bind value class="ui-fade-1"}}
     {{/if}}
   </h2>
 {{/liquid-if}}
