--- a/app/templates/navigate.hbs
+++ b/app/templates/navigate.hbs
@@ -45,7 +45,7 @@
 
   <div class="Gloss-module Gloss-module--x">
     {{gloss-shard
-      label="Current ship"
+      label="Ship"
       value=character.ship.name
       loaded=loadUiElements
       loadOrder=6
