--- a/app/templates/welcome.hbs
+++ b/app/templates/welcome.hbs
@@ -1,9 +1,14 @@
 <div class="Gloss-module Gloss-module--x">
   <div class="Gloss-module Gloss-module--y Gloss-hud">
     <div class="Gloss-module">
-      {{gloss-message
-        header="Booting system..."
-        }}
+      <div class="Gloss-logo">
+        Gloss
+      </div>
+      <div>
+        {{gloss-message
+          header="Booting system..."
+          }}
+      </div>
     </div>
   </div>
 </div>
