--- a/app/templates/welcome.hbs
+++ b/app/templates/welcome.hbs
@@ -1,14 +1,15 @@
 <div class="Gloss-module Gloss-module--x">
   <div class="Gloss-module Gloss-module--y Gloss-hud">
-    <div class="Gloss-module">
-      <div class="Gloss-logo">
-        Gloss
-      </div>
-      <div>
-        {{gloss-message
-          header="Booting system..."
-          }}
-      </div>
+    <div class="Gloss-module Gloss-flex--1_1">
+      <h1 class="Gloss-logo">
+        {{liquid-bind title class="ui-fade-2"}}
+      </h1>
+    </div>
+    <div class="Gloss-module Gloss-flex--start">
+      {{gloss-message
+        subheader=message
+        loaded=loaded
+        }}
     </div>
   </div>
 </div>
