--- a/app/styles/components/gloss-shard.scss
+++ b/app/styles/components/gloss-shard.scss
@@ -2,8 +2,8 @@
   flex: 1;
   text-align: center;
 
-  h2, h5 {
-    font-family: 'EVE Sans', sans-serif;
+  * {
+    font-family: 'EVE Sans', sans-serif !important;
   }
 
   h2 {
