--- a/app/styles/utilities/_flex.scss
+++ b/app/styles/utilities/_flex.scss
@@ -23,6 +23,11 @@
   align-self: flex-end !important;
 }
 
+/* Wrapping */
+.Gloss-flex--wrap {
+  flex-wrap: wrap;
+}
+
 /* Sizing */
 .Gloss-flex--1_1 {
   flex: 1.1 !important;
