--- a/app/styles/components/gloss-message.scss
+++ b/app/styles/components/gloss-message.scss
@@ -1,4 +1,11 @@
 .Gloss-message {
+  position: absolute;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
   h2, h3 {
     margin: 0 auto;
     padding: 0;
