--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,9 @@
 <div class="Gloss">
   {{liquid-outlet}}
 </div>
+
+{{gloss-message
+  header=messageHeader
+  subheader=messageSubheader
+  isShowingMessage=isShowingMessage
+  }}
