improvements to message service

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -51,10 +51,9 @@ body {
 
 .Gloss-logo {
   font-weight: 300;
-  align-self: flex-end !important;
   font-size: 3.75rem;
   font-family: 'Titillium Web', sans-serif;
   letter-spacing: 0.7rem;
-  margin: 0;
+  margin: 0 0 7.5rem 0;
   height: 5.6875rem;
 }
