--- a/app/styles/components/gloss-message.scss
+++ b/app/styles/components/gloss-message.scss
@@ -1,10 +1,14 @@
 .Gloss-message {
   position: absolute;
-  z-index: 1000;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
+  z-index: -1;
+
+  &--shown {
+    z-index: 1000;
+  }
 
   h2, h3 {
     margin: 0 auto;
